33-aws-eks-ecomm-3-istio/1-Traffic/4-retry/order-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuit-dr-order
  namespace: shoppingportal    
spec:
  host: order-service.shoppingportal.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
