33-aws-eks-ecomm-3-istio/1-Traffic/4-retry/order-retry-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shippingservice-retry
  namespace: shoppingportal    
spec:
  hosts:
  - order-service.shoppingportal.svc.cluster.local
  http:
    - route:
      - destination:
          host: order-service.shoppingportal.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 3s
        retryOn: gateway-error,connect-failure,refused-stream
